# rust-cargo-ec

./: .gitignore  Cargo.toml
cargo-ec/: Cargo.toml
src/: cli.yml  main.rs
src/template/: Cargo.toml  Cargo.toml.txt  doubler_coin.rs  error.rs  lib.rs  main.rs
templates/simple_token/: Cargo.toml
templates/simple_token/src/: error.rs  lib.rs  simple_token.rs
