[package]
name = "doubler_coin"
version = "0.1.0"
edition = "2018"

[lib]
crate-type =["cdylib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dev-dependencies]
ellipticoin-test-framework = "0.1.3"
mock-ellipticoin = "0.1.1"

[dependencies]
lazy_static = "1.3.0"
ellipticoin = "0.1.5"
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc" }
wasm-rpc = "0.2.14"
wasm-rpc-macros = "0.2.14"
