[package]
name = "simple_token"
version = "0.1.0"
edition = "2018"

[lib]
crate-type =["cdylib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dev-dependencies]
ellipticoin-test-framework = {"path" = "../../../rust-ellipticoin-test-framework"}
mock-ellipticoin = {"path" = "../../../rust-mock-ellipticoin"}

[dependencies]
lazy_static = "1.3.0"
ellipticoin = {"path" = "../../../rust-ellipticoin"}
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc" }
wasm-rpc = {"path" = "../../../rust-wasm-rpc/wasm-rpc"}
wasm-rpc-macros = {"path" = "../../../rust-wasm-rpc/wasm-rpc-macros"}
